@@ -1,5 +1,6 @@
 package cs544.Service;
 
+import cs544.DTO.ModelDTOMapper;
 import cs544.DTO.PostDTO;
 import cs544.Exception.ResourceNotFoundException;
 import cs544.Model.Post;
@@ -24,37 +25,33 @@ public class PostService {
     @Autowired
     private PostRepository postRepository;
     @Autowired
-    private ModelMapper modelMapper;
-    @Autowired
     private IUserRepository userRepository;
     @Autowired
-    private CommentService commentService;
+    private ModelDTOMapper modelDTOMapper;
 
-//    @Autowired
-//    private RestTemplate restTemplate;
-//    @Autowired
-//    private AuthService authService;
 
     public List<PostDTO> getAllPosts(){
-        List<Post> posts = postRepository.findAll();
-        return posts.stream().map(this::mapFromPostToDto).collect(toList());
+        return postRepository.findAll()
+                .stream()
+                .map(post -> modelDTOMapper.postToPostDTO(post))
+                .toList();
     }
-
     public PostDTO savePost(Integer userId, PostDTO postDto){
-        Post post = mapFromDToTOPost(postDto);
+        Post post = modelDTOMapper.postDTOtOPost(postDto);
         User user=userRepository.findById(userId)
                 .orElseThrow(()->new ResourceNotFoundException("User","id",userId));
-        post.setUser(user);
-        Post savedPost=postRepository.save(post);
-        return mapFromPostToDto(savedPost);
+        post.setPostAuthor(user);
+        post.setPostDate(LocalDateTime.now());
+        post.setUpdateOn(LocalDateTime.now());
+        return modelDTOMapper.postToPostDTO(postRepository.save(post));
     }
     public PostDTO editPost(Integer id, PostDTO postDto){
         Post post =postRepository.findById(id).orElseThrow(()->new PostNotFoundException("For id"+id));
         post.setTitle(postDto.getTitle());
         post.setBody(postDto.getBody());
         post.setUpdateOn(LocalDateTime.now());
-        Post eidtedPost=postRepository.save(post);
-        return mapFromPostToDto(eidtedPost);
+        Post editedPost=postRepository.save(post);
+        return modelDTOMapper.postToPostDTO(editedPost);
     }
     public void deletePost(Integer id){
         try {
@@ -63,30 +60,9 @@ public class PostService {
             throw new PostNotFoundException("For id"+id);
         }
     }
-    public PostDTO readSinglePost(Integer id){
-        Post post =postRepository.findById(id).orElseThrow(()->new PostNotFoundException("For is"+id));
-        return mapFromPostToDto(post);
-    }
-    public PostDTO mapFromPostToDto(Post post){
-        PostDTO postDto= new PostDTO();
-        postDto.setId(post.getId());
-        postDto.setBody(post.getBody());
-        postDto.setTitle(post.getTitle());
-        postDto.setUsername(post.getUser().getName());
-        postDto.setPostDate(LocalDateTime.now());
-        postDto.setUpdateOn(LocalDateTime.now());
-        postDto.setCommentDTOList(post.getComments().stream().
-                map(comment -> commentService.commentToCommmentDTO(comment))
-                .toList());
-        return postDto;
-    }
-    public Post mapFromDToTOPost(PostDTO postDto){
-        Post post = new Post();
-        post.setTitle(postDto.getTitle());
-        post.setBody(postDto.getBody());
-        post.setPostDate(LocalDateTime.now());
-        post.setUpdateOn(LocalDateTime.now());
-        return post;
+    public PostDTO readSinglePost(Integer id) {
+        Post post = postRepository.findById(id).orElseThrow(() -> new PostNotFoundException("For is" + id));
+        return modelDTOMapper.postToPostDTO(post);
     }
 
 }
